# Ruzino-Homework

./: CMakeLists.txt  README.md  configure.py
.github/scripts/: check-sdk.ps1
.github/workflows/: build.yml
cmake/: AddLibrary.cmake  AddNodes.cmake
prompts/: test_instructions.md
scripts/: unused_header.py
source/Core/rzfembem/: CMakeLists.txt
source/Core/rzsim/: CMakeLists.txt
source/Core/rzsim/geometry_nodes/: bss_deducer.cpp  deducer.py  mass_spring_implicit.cpp  mass_spring_implicit_gpu.cpp  neo_hookean_gpu.cpp  nn_boundary_detector.cpp  node_reduced_basis.cpp  reduced_order_neo_hookean_gpu.cpp  shape_space_geometry_gen.cpp
source/Core/rzsim/include/rzsim/: cuda_init.h  reduced_order_basis.h  rzsim.h
source/Core/rzsim/rzsim_cuda/: CMakeLists.txt
source/Core/rzsim/rzsim_cuda/include/rzsim_cuda/: adjacency_map.cuh  api.h  mass_spring_implicit.cuh  neo_hookean.cuh  reduced_order_neo_hookean.cuh
source/Core/rzsim/rzsim_cuda/src/: adjacency_map.cu  mass_spring_implicit.cu  neo_hookean.cu  reduced_order_neo_hookean.cu
source/Core/rzsim/src/: cuda_init.cpp  reduced_order_basis.cpp  rzsim.cpp
source/Core/rzsim/tests/: adjacency_map.cpp  reduced_basis.cpp  reduced_basis_simple.cpp
source/Editor/: CMakeLists.txt
source/Editor/GUI/: CMakeLists.txt
source/Editor/blueprints/: CMakeLists.txt
source/Editor/geometry/: CMakeLists.txt  MaterialComponent.cpp  MeshOperand.cpp  PointsComponent.cpp  XformComponent.cpp  util_openmesh_bind.cpp
source/Editor/geometry_nodes/: CMakeLists.txt  GPU_sph.cpp  geom_node_base.h  hw5_param.cpp  instance_on_points.cpp  node_colormap.cpp  node_create_geom.cpp  node_curve_to_mesh.cpp  node_dirichlet_energy.cpp  node_extract_areas.cpp  node_fill_hole.cpp  node_geom_add_point.cpp  node_get_current_usd_path.cpp  node_points_to_mesh.cpp  node_print_debug_info.cpp  node_read_obj.cpp  node_read_usd.cpp  node_reserve_verts.cpp  node_select_verts.cpp  node_set_scalar_as_height.cpp  node_set_value.cpp  node_set_vert_color.cpp  node_shortest_path.cpp  node_write_usd.cpp  set_material.cpp
source/Editor/material/: CMakeLists.txt
source/Editor/rzpython/: CMakeLists.txt
source/Editor/simulation_nodes/: CMakeLists.txt  mass_spring.cpp  projective_dynamics.cpp
source/Plugins/: CMakeLists.txt
source/Plugins/hd_RUZINO_Embree/: CMakeLists.txt
source/Plugins/hd_RUZINO_GL/: api.h  node_exec_eager_render.cpp  node_exec_eager_render.hpp  renderDelegate.cpp  renderer.cpp
source/Plugins/hd_USTC_CG_Embree/: CMakeLists.txt  context.h  material.cpp  material.h  renderer.cpp
source/Plugins/light_field/: CMakeLists.txt
source/Plugins/light_field/renderer_nodes/: light_field_raygen.cpp
source/Plugins/optimization/: functional_autodiff.cpp  test_functions.cpp
source/Plugins/util_scripts/: nodes_json.py
source/Runtime/basic_nodes/: node_func_create_buffer.cpp
submissions/: CMakeLists.txt
submissions/wangmazi_homework/: README.md
tests/application/: CMakeLists.txt  Ruzino.cpp  USTC_CG.cpp  headless_geom_node_executor.cpp  headless_render.cpp
tools/: diagnose_dll.ps1
(+196 files in other folders)
